--- a/index.html
+++ b/index.html
@@ -7,34 +7,34 @@
 </head>
 <body>
     <div class="menu">
-        <h1>Шапка сайта(содержит название сайта и навигационное меню) </h1>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <h1 align="right">Лаборатория физико-химических методов исследования </h1>
+        <nav class="navbar navbar-expand-lg bg-body-secondary ">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Навбар</a>
+            <a class="navbar-brand" href="#">О нас</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Главная</a>
+                  <a class="nav-link" aria-current="page" href="#">Исследования</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Ссылка</a>
+                  <a class="nav-link" href="#">Оборудование и Методы</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Выпадающий список
+                    Услуги
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Действие</a></li>
-                    <li><a class="dropdown-item" href="#">Другое действие</a></li>
+                    <li><a class="dropdown-item" href="#">Стоимость типовых услуг</a></li>
+                    <li><a class="dropdown-item" href="#">Метрологическое обеспечение</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>
+                    <li><a class="dropdown-item" href="#">Заявка на проведение исследований</a></li>
                   </ul>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link disabled">Отключенная</a>
+                 <li class="nav-item">
+                  <a class="nav-link" href="#">Сотрудничество</a>
                 </li>
               </ul>
               <form class="d-flex" role="search">
@@ -47,19 +47,20 @@
     </div>
 
     <div class="menu1">
-       <hr>
-        <br>
-        <h1>Основной контент(содержит три секции, в первой слайдер с минимум 3 фото,</h1>
-        <div id="carouselExample" class="carousel slide">
+       <div id="carouselExample" class="carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="..." class="d-block w-100" alt="...">
+              <img src="20230111_160844.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
+              <img src="20230111_160528.jpg" class="d-block w-100" alt="...">
             </div>
+
             <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
+              <img src="20230111_155948.jpg" class="d-block w-100" alt="...">
+            </div>
+              <div class="carousel-item">
+              <img src="P1010038.JPG" class="d-block w-100" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -70,20 +71,47 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Следующий</span>
           </button>
-        </div>
+       </div>
 
     </div>
 
     <div class="menu2">
-        <h1><br>во второй три карточки, расположенные в три колонки для больших экранов и в один столбец для маленьких экранов,</h1>
-        <div class="card" style="width: 18rem;">
-          <img src="..." class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Заголовок карточки</h5>
-            <p class="card-text">Небольшой пример текста, который должен основываться на названии карточки и составлять основную часть содержимого карты.</p>
-            <a href="#" class="btn btn-primary">Перейти куда-нибудь</a>
-          </div>
+        <br>
+       <div class="container">
+            <div class="row">
+            <div class="col-sm-12 col-lg-4">
+                <div class="card" style="width: 25rem;">
+                  <img src="card_img/20210219_103024.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">ИК и УФ-спектроскопия</h5>
+                    <p class="card-text">Определение качественного и количественного состава растительного сырья. Определение функционального и элементного состава растительных полимеров.</p>
+                    <a href="#" class="btn btn-primary">Заказать исследование</a>
+                  </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4">
+                <div class="card" style="width: 25rem;">
+                  <img src="card_img/20221102_114311.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Спектроскопия ЯМР</h5>
+                    <p class="card-text">Идентификация химической структуры компонентов растворов синтетических и природных веществ, лекарственных препаратов, нефтепродуктов, полимерных композитов и т.д.</p>
+                    <a href="#" class="btn btn-primary">Заказать исследование</a>
+                  </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-lg-4">
+                <div class="card" style="width: 25rem;">
+                  <img src="card_img/20230111_155815.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Синхронный термический анализ</h5>
+                    <p class="card-text">Определение термостойкости материалов, температуры плавления, кристаллизации, испарения, стеклования, фазовых переходов I-го и II-го рода, разложения, кинетики и энтальпии.</p>
+                    <a href="#" class="btn btn-primary">Заказать исследование</a>
+                  </div>
+                </div>
+            </div>
         </div>
+       </div>
+
     </div>
 
     <div class="menu3">
@@ -130,8 +158,14 @@
 
     </div>
 
+     <br>
+    <br>
+    <hr>
+    <hr>
     <div class="footer">
-        <h1>Футер(содержит контактную информацию и ссылки на социальные сети)</h1>
+        <h4>Контакты      </h4>
+         <p> АДРЕС: Северо-Западный, Республика Коми 167000, г. Сыктывкар, ул. Первомайская, 48 http://chemi.komisc.ru/</p>
+        <p> КОНТАКТНОЕ ЛИЦО: Белый Владимир Александрович (8212) 243304 info@chemi.komisc.ru skeyling@yandex.ru</p>
 
     </div>
 
