--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="menu">
-        <h1 align="right">Лаборатория физико-химических методов исследования </h1>
+        <h1 align="right">ЦКП "Химия"</h1>
         <nav class="navbar navbar-expand-lg bg-body-secondary ">
           <div class="container-fluid">
             <a class="navbar-brand" href="#">О нас</a>
@@ -115,42 +115,61 @@
     </div>
 
     <div class="menu3">
-        <h1><br>в третьей аккордеон с информацией</h1>
-
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Элемент аккордеона #1
+                Основные  направления исследований
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>Это тело аккордеона первого элемента.</strong> Оно отображается по умолчанию, пока плагин свертывания не добавит соответствующие классы, которые мы используем для стилизации каждого элемента. Эти классы управляют общим внешним видом, а также отображением и скрытием с помощью переходов CSS. Вы можете изменить все это с помощью собственного CSS или переопределить наши переменные по умолчанию. Также стоит отметить, что практически любой HTML может быть помещен в <code>.accordion-body</code>, хотя переход ограничивает переполнение.
+                <ul>
+                    <li>Фундаментальные проблемы реакционной способности химических соединений,
+                        механизмы химических реакций, методология органического и неорганического синтеза;
+                    </li>
+                    <li>Научные основы экологически безопасного и ресурсосберегающего использования растительного сырья
+                        и его компонентов для получения  химических продуктов и материалов;</li>
+                    <li>Физико-химические основы технологии получения керамических, композиционных
+                    и нано-материалов с использованием синтетического и природного (минерального и растительного) сырья;
+                    </li>
+                    <li>Создание новых веществ и материалов на основе полимеров растительного происхождения;</li>
+                    <li>Фундаментальные проблемы получения физиологически активных соединений на основе синтетических,
+                        полусинтетических и природных веществ; асимметрический синтез.</li>
+
+                </ul>
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Элемент аккордеона #2
+                Инновационные направления деятельности
               </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>Это тело аккордеона второго элемента.</strong> По умолчанию он скрыт, пока плагин свертывания не добавит соответствующие классы, которые мы используем для стилизации каждого элемента. Эти классы управляют общим внешним видом, а также отображением и скрытием с помощью переходов CSS. Вы можете изменить все это с помощью собственного CSS или переопределить наши переменные по умолчанию. Также стоит отметить, что практически любой HTML может быть помещен в <code>.accordion-body</code>, хотя переход ограничивает переполнение.
+                <ul>
+                    <li>Переработка растительного сырья</li>
+                    <li>Органический синтез с получением субстанций лекарственных средств</li>
+                    <li>Органический синтез с получением анитиоксидантов</li>
+                    <li>Химия растительных полимеров</li>
+                    <li>Керамика и композиционные материалы</li>
+                    <li>Полимерные композиционные материалы</li>
+
+                </ul>
               </div>
             </div>
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Элемент аккордеона #3
+                ИННОВАЦИОННЫЕ ТЕХНОЛОГИИ, МАТЕРИАЛЫ И БИОМЕДИЦИНСКИЕ ПРЕПАРАТЫ НА ОСНОВЕ ПРИРОДНЫХ СОЕДИНЕНИЙ ДЛЯ ЭКОЛОГИИ И ЗДОРОВЬЯ ЧЕЛОВЕКА НА СЕВЕРЕ
               </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>Это тело аккордеона третьего элемента.</strong> По умолчанию оно скрыто, пока плагин свертывания не добавит соответствующие классы, которые мы используем для стилизации каждого элемента. Эти классы управляют общим внешним видом, а также отображением и скрытием с помощью переходов CSS. Вы можете изменить все это с помощью собственного CSS или переопределить наши переменные по умолчанию. Также стоит отметить, что практически любой HTML может быть помещен в <code>.accordion-body</code>, хотя переход ограничивает переполнение.
+                <strong>Цель проекта </strong>- создание новых биологически активных веществ, фармацевтических субстанций и биосовместимых материалов  на основе природных и полусинтетических соединений, регистрация и вывод новых фармацевтических  субстанций и биоматериалов на рынок, что обеспечит качественное улучшение экологии и здоровья человека на Севере.
               </div>
             </div>
           </div>
